# bincode

./: .gitignore  .travis.yml  Cargo.toml  changelist.org  readme.dev.md  readme.md
.github/: dependabot.yml  stale.yml
.github/workflows/: cifuzz.yml  cross_platform.yml  miri.yml  rust.yml  security.yml  strict_oom.yml
benches/: inline.rs  string.rs  varint.rs
compatibility/: Cargo.toml  README.md
compatibility/src/: lib.rs  membership.rs  misc.rs  rand.rs  sway.rs
derive/: Cargo.toml  readme.md  tarpaulin-report.html
derive/src/: attribute.rs  derive_enum.rs  derive_struct.rs  error.rs  generate.rs  lib.rs  utils.rs
derive/src/generate/: generate_fn.rs  generator.rs  impl_for.rs  mod.rs  stream_builder.rs
derive/src/parse/: attributes.rs  body.rs  data_type.rs  generics.rs  mod.rs  visibility.rs
docs/: migration_guide.md  spec.md
examples/: basic.rs  file.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compat.rs  encoded_size.rs  fuzz_target_1.rs  roundtrip.rs
src/: atomic.rs  byteorder.rs  config.rs  de.rs  error.rs  int_encoding.rs  internal.rs  lib.rs  reader.rs  reader_serde.rs  refbox.rs  ser.rs  test.rs  try_into.rs  utils.rs  writer.rs  writer_serde.rs
src/config/: endian.rs  int.rs  legacy.rs  limit.rs  mod.rs  str.rs  trailing.rs
src/de/: decoder.rs  impl_core.rs  impl_tuples.rs  impls.rs  mod.rs  read.rs
src/enc/: encoder.rs  impl_tuples.rs  impls.rs  mod.rs  write.rs
src/features/: atomic.rs  derive.rs  impl_alloc.rs  impl_embedded_io.rs  impl_smallvec.rs  impl_std.rs  mod.rs
src/features/serde/: de_borrowed.rs  de_owned.rs  mod.rs  ser.rs  size.rs
src/imports/: io.rs  mod.rs
src/rustc_serialize/: mod.rs  reader.rs  writer.rs
src/ser/: mod.rs
src/serde/: mod.rs  reader.rs  writer.rs
src/size/: impl_tuples.rs  impls.rs  mod.rs
src/tests/: issues.rs
src/tests/issues/: issue_474.rs
src/varint/: decode_signed.rs  decode_unsigned.rs  encode_signed.rs  encode_unsigned.rs  mod.rs  size_signed.rs  size_unsigned.rs
src/varint_encoding/: mod.rs  signed.rs  unsigned.rs
tests/: alloc.rs  atomic.rs  basic_types.rs  compatibility.rs  derive.rs  derive_rename.rs  error_size.rs  issues.rs  readme.rs  serde.rs  smallvec.rs  std.rs  test.rs  test_serde.rs  utils.rs
tests/issues/: issue_427.rs  issue_431.rs  issue_459.rs  issue_467.rs  issue_474.rs  issue_498.rs  issue_500.rs  issue_523.rs  issue_614.rs
