[workspace]
members = [
    "derive"
]

[package]
name = "bincode"
version = "2.0.0-alpha.0" # remember to update html_root_url and bincode_derive
authors = ["Ty Overby <ty@pre-alpha.com>", "Zoey Riordan <zoey@dos.cafe>", "Victor Koenders <bincode@trangar.com>"]
exclude = ["logo.svg", "examples/*", ".gitignore", ".github/"]

publish =  true

repository = "https://github.com/bincode-org/bincode"
documentation = "https://docs.rs/bincode"
readme = "./readme.md"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]

license = "MIT"
description = "A binary serialization / deserialization strategy for transforming structs into bytes and vice versa!"

edition = "2021"

[features]
default = ["std", "derive", "atomic"]
std = ["alloc"]
alloc = []
atomic = []
derive = ["bincode_derive"]

# BlockedTODO: https://github.com/rust-lang/cargo/issues/8832
# We really want these features to automatically be enabled when both "serde" and either "alloc"/"std" is enabled
# But this is currently not possible
serde = ["std", "serde_incl", "serde_incl/std"]

[dependencies]
bincode_derive = { path = "derive", version = "2.0.0-alpha.0", optional = true }
serde_incl = { package = "serde", version = "1.0.130", optional = true }

# Used for tests
[dev-dependencies]
serde_derive = "1.0.130"
serde_json = "1.0.68"
tempfile = "3.2.0"
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "varint"
harness = false

[profile.bench]
codegen-units = 1
debug = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
