[workspace]
members = [
    "derive",
    "compatibility"
]

[package]
name = "bincode"
version = "2.0.0-rc.1" # remember to update html_root_url and bincode_derive
authors = ["Ty Overby <ty@pre-alpha.com>", "Zoey Riordan <zoey@dos.cafe>", "Victor Koenders <bincode@trangar.com>"]
exclude = ["logo.svg", "examples/*", ".gitignore", ".github/"]

publish =  true

repository = "https://github.com/bincode-org/bincode"
documentation = "https://docs.rs/bincode"
readme = "./readme.md"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]

license = "MIT"
description = "A binary serialization / deserialization strategy for transforming structs into bytes and vice versa!"

edition = "2021"

[features]
default = ["std", "derive", "atomic"]
std = ["alloc"]
alloc = []
atomic = []
derive = ["bincode_derive"]

# BlockedTODO: https://github.com/rust-lang/cargo/issues/8832
# We want to enable these features automatically based on "alloc" or "std"
#   std = ["alloc", "serde?/std"]
#   alloc = ["serde?/alloc"]
# now we have to do this hack:
serde = ["serde_incl/std", "std", "serde_alloc"] # std
serde_alloc = ["serde_incl/alloc", "alloc"] # alloc
serde_no_std = ["serde_incl"] # no_std

[dependencies]
bincode_derive = { path = "derive", version = "2.0.0-rc.1", optional = true }
serde_incl = { package = "serde", version = "1.0", default-features = false, optional = true }

# Used for tests
[dev-dependencies]
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false }
tempfile = "3.2"
criterion = "0.3"
rand = "0.8"
uuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "varint"
harness = false

[[bench]]
name = "inline"
harness = false

[profile.bench]
codegen-units = 1
debug = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
